# strid

./: .gitignore  pyproject.toml
docs/: index.html  script.js  style.css
ios/: PLAN.md
ios/StridApp/: ContentView.swift  StridApp.swift  project.yml
ios/StridApp/Adapters/Outbound/Storage/: InMemoryRedactionHistoryRepository.swift  (+1 more)
ios/StridApp/DI/: DIContainer.swift
ios/StridApp/Design/: ColorPalette.swift
ios/StridApp/Domain/Entities/: DetectedPII.swift  Document.swift  RedactedDocument.swift  RedactionHistoryEntry.swift  SampleDocument.swift  ScannedDocument.swift
ios/StridApp/Domain/Ports/: DocumentRepositoryPort.swift  PIIDetectorPort.swift  RedactionHistoryRepositoryPort.swift  ScannedDocumentRepositoryPort.swift
ios/StridApp/Domain/UseCases/: DeleteScannedDocumentUseCase.swift  DetectPIIUseCase.swift  ExportDocumentUseCase.swift  GetRedactionHistoryUseCase.swift  GetScannedDocumentsUseCase.swift  ImportDocumentUseCase.swift  RecordRedactionUseCase.swift  RedactPIIUseCase.swift  SaveScannedDocumentUseCase.swift
ios/StridApp/StridApp.xcodeproj/: project.pbxproj
ios/StridApp/StridAppMacTests/: StridAppMacTests.swift
ios/StridApp/StridAppTests/: README.md  StridAppTests.swift
ios/StridApp/StridAppTests/Helpers/: MockDIContainer.swift  MockDependencies.swift  TestFactories.swift
ios/StridKit/: Package.swift
ios/StridKit/Sources/StridKit/: Models.swift  Redactor.swift  StridEngine.swift
ios/StridKit/Tests/StridKitTests/: SampleStatementTests.swift  StridEngineTests.swift
src/strid/: __init__.py  cli.py  engine.py  recognizers_in.py
(+27 files in other folders)
