[project]
name = "strid"
version = "0.1.0"
description = "CLI tool to detect and redact PII from text documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "rich>=13.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz",
]

[project.scripts]
strid = "strid.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strid"]
